--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-datasource-rest": "^0.14.0",
+    "apollo-server-lambda": "^2.25.2",
     "date-fns": "^2.22.1",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
+    "netlify-lambda": "^2.0.11",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
@@ -26,10 +32,11 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "react-scripts build",
+    "build:lambda": "netlify-lambda build src/lambda"
   },
   "eslintConfig": {
     "extends": [
