--- a/client/package.json
+++ b/client/package.json
@@ -32,11 +32,13 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "test": "react-scripts test",
     "start": "react-scripts start",
     "start:lambda": "netlify-lambda serve src/lambda",
-    "build": "react-scripts build",
-    "build:lambda": "netlify-lambda build src/lambda"
+    "build": "run-p build:**",
+    "build:app": "react-scripts build",
+    "build:lambda": "netlify-lambda build src/lambda",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
