--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.14.0",
     "apollo-server": "^2.25.2",
+    "dotenv": "^16.0.2",
     "graphql": "^15.5.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
